# my-cxx-template

./: .ccls  .clang-tidy  CMakeLists.txt  README.md
src/: main.cpp
